testing with native compile